weport draft finished + pseudo algorithms

--- a/tex/bib/mybib.bib
+++ b/tex/bib/mybib.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Mon, 17 Sep 2012.
+%% Created using Papers on Wed, 19 Sep 2012.
 %% http://mekentosj.com/papers/
 
 @book{kosslyn1980image,
@@ -1013,13 +1013,6 @@ year = {2008},
 pages = {83--90}
 }
 
-@misc{hill:1995rev,
-title = {{RECOMMENDING AND EVALUATING CHOICES IN A VIRTUAL COMMUNITY OF USE}},
-author = {Hill, Will and Stead, Larry and Rosenstein, Mark and Furnas, George},
-month = sep,
-year = {2012}
-}
-
 @book{bloch2007aristotle,
 author = {Bloch, D. and {others}},
 title = {{Aristotle on memory and recollection: text, translation, interpretation, and reception in Western scholasticism}},
@@ -1185,6 +1178,14 @@ month = aug
 @booklet{Manovich:wu,
 title = {{The language of new media (1st MIT Press pbk. ed.)}},
 author = {Manovich, Lev}
+}
+
+@article{Hill:1995vy,
+author = {Hill, W. and Stead, L. and Rosenstein, M. and Furnas, G.},
+title = {{Recommending and evaluating choices in a virtual community of use}},
+journal = {Proceedings of the SIGCHI conference on Human factors in computing systems},
+year = {1995},
+pages = {194--201}
 }
 
 @article{Dennett:1971uv,
