--- a/tex/main/evaluation.tex
+++ b/tex/main/evaluation.tex
@@ -3,9 +3,16 @@
 
 This is the Evaluation section.
 
+\section{Experiments}
+For our experiments described in this section we use a set of 10 unedited, user-generated videos that were returned in response to a query for ``Diamond Jubilee London'' on YouTube.
 
-\section{The Interface}
-Positioning two video's one on top of the other, might inflict a bias for users in their attentional behaviour. It might be the case that videos on the top are systematically more attended to than videos displayed below. We've experimented to see whether such positioning bias effects occur and report on this in section \ref{sec:experiments} [*TODO ref].
+
+
+
+\section{Results}
+
+\subsection{The Interface}
+Positioning two video's one on top of the other, might inflict a bias for users in their attentional behaviour. It might be the case that videos on the top are systematically more attended to than videos displayed below. We've experimented to see whether such positioning bias effects occur and report on this in section \ref{ch:evaluation}.
 
 
 \subsection{Landscapes of Interest}
