reconfig chapters restructured meaning chapter, improved refs

--- a/dissertation_main.tex
+++ b/dissertation_main.tex
@@ -18,6 +18,7 @@
 \pagenumbering{Alph}
 \input{./tex/title}
 \pagenumbering{arabic}
+% TODO insert black page between title and abstract
 \input{./tex/abstract}§
 %\maketitle
 \tableofcontents
