--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -37,6 +37,8 @@ Quinn and Bederson further present a classification along six dimensions they se
 
 
 \section{Computation in Interaction}
+
+
 % many people watching collaborating
 % is collective intelligence HC?
 Clicking from one video to the next (choosing from a set of related videos)
@@ -64,17 +66,18 @@ Important trend of the web as platform of creation. In terms of video creation f
 
 [VideoReach: an online video recommendation system]\cite{Mei:2007wa}
 
-\section{Collaborative Filtering}
+\section{Collaborative Filtering} 
+
+% \url{http://en.wikipedia.org/wiki/Collaborative_filtering}
 
 The idea of using user's past interactions within a system hosting digital content for the filtering of items that might be of interest is not a new one and usually goes by the name of collaborative filtering. 
 Collaborative filtering can generally take two forms: User-based, Item-based
 
 Information filtering agents and collaborative filtering both
 attempt to alleviate information overload by identifying
-which items a user will find worthwhile.  I
+which items a user will find worthwhile.
 
-
-already happening at YouTube
+% already happening at YouTube
 
 \section{A Characterisation of Human Computation Systems}
 \subsection{Purpose}
