--- a/tex/main/meaningfulComputation.tex
+++ b/tex/main/meaningfulComputation.tex
@@ -1,43 +1,90 @@
 \chapter{The Quest for Meaning in Video}
 \label{ch:quest}
 
-[The intention of this thesis is not to give an accurate explanation of daunting concepts like meaning or semantics, nor is it to give an in-depth description of the diverse work on the relationship between signifier and signified in the field of semiotics. This first chapter is meant to briefly introduce the difficulties that current computational methods have in arriving at a meaningful interpretation of visual content. To this purpose we formulate a framework of computational analyses of meaning that serves to establish terminology to work with, rather than to make claims about the internal functioning of human understanding or signifying systems.]
+[TODO intro to chapter]
 
-\section{Computational Undertakings of the Quest for Meaning}
+\section{Scope of this Chapter}
 
-\subsection{Meaning in Visuals}
-[Video structuring, indexing and retrieval based on global motion wavelet coefficients]\cite{Bruno:2002tt}
+Because of the big, daunting and often elusive character of the concept meaning, we take care to keep our intentions for this chapter humble. The intension is not to give an accurate explanation of daunting concepts like meaning or semantics, nor is it to give an account of the diverse work on the relationship between signifier and signified in the field of semiotics. This first chapter is meant to briefly introduce the difficulties that current computational methods have in arriving at a meaningful interpretation of visual content. To this purpose we formulate a framework of computational analyses of meaning that serves to establish terminology to work with in the remainder of this work, rather than to make claims about the deeper functioning of human understanding or signifying systems.
 
-\subsection{Meaning in Concept}
-\subsection{Meaning in Structure}
-[cite bordwell \& Thompson: analysis of context dependency]
-% hypervideo as form of 1 narrative 2 navigation, link to database documentary
-[HyperCafe: Narrative and Aesthetic Properties of Hypervideo \cite{Sawhney:1996tk}]
+\section{The Need for Labelling}
 
-\subsection{Meaning in Annotations}
+Because visual data on it's own provides little machine-readable handles to search and find, repositories of multimedia content need to be indexed with symbolic labels to enable search.
+
+
+\subsection{Human Labelling}
+
+\subsection{Machine Labelling}
+
+
+\section{The Semantic Gap}
+
+
+\section{Computationally Narrowing the Gap}
+
+\subsection{Supervised Concept Learning}
+
+The paradigm most in use for the detection of concepts in video is supervised learning. In a supervised machine learning task, one learns the relation between a collection of input values and a smaller set of output values. A relation between inputs and outputs is learned by presenting a large number of training examples as input along with their respective output values. For video concept detection, input values are usually a collection of features representing different aspects of the video while outputs code for the concept that is known to be present. 
+
+Although detectors can be trained to learn to detect patters of multiple concepts, usually a separate concept detectors are trained for distinct concepts. By applying multiple detectors on an previously unseen input instance, multiple concepts can be detected.
+
+\subsection{Video Feature Extraction}
+
+\subsubsection{Meaning in Visual Features}
+
+Visual features are extracted both locally at the level of regions and pixels and globally at the level of frames.
+
+\paragraph{Color}
+
+\paragraph{Texture}
+
+\paragraph{Shape}
+
+\subsubsection{Meaning in other Modalities}
+The use of audio and text for extraction of features.
+
 [Telop-on-demand: Video structuring and retrieval based on text recognition]\cite{Kuwano:2000wy}
 [Addressing the Challenge of Visual Information Access from Digital Image and Video Libraries]\cite{Christel:2005td}
 
-\section{Computational Undertakings of the Quest}
-\subsection{The Semantic Gap}
+\subsection{Meaning in Structure}
 
 
-\subsection{Steps towards Meaning: An Overview}
-Schematized summary of different steps:
-indexing
-automatic metadata
-annotating
-  Human-Driven Labeling
-  Machine-Driven Labeling
-multimodal feature fusion
-concept based
-content based [Relevance feedback: A power tool for interactive content-based image retrieval]\cite{Rui:1998uj}
-[The Relative Effectiveness of Concept-based Versus Content-based Video Retrieval]\cite{Yang:2004tc}
+[cite bordwell \& Thompson: analysis of context dependency]
+[link to narratives and storytelling]
+% hypervideo as form of 1 narrative 2 navigation, link to database documentary
+[HyperCafe: Narrative and Aesthetic Properties of Hypervideo \cite{Sawhney:1996tk}]
 
-[collaborative filtering] \url{http://en.wikipedia.org/wiki/Collaborative_filtering}
+\subsubsection{Spatial Structure}
+\subsubsection{Temporal Structure}
 
-\subsection{Indexing to enable search}
-Because visual data on it's own provides little machine-readable handles to search and find, repositories of multimedia content need to be index to enable search. Within the task of video indexing several approaches are taken 
+
+
+
+\section{Interactive Storytelling: From database to data-based}
+\label{ch:storytelling}
+\subsection{Symbolic approaches}
+\label{sec:symbolic}
+
+\cite{Vilmos:2011wv,RodrigoLaiolaGuimaraes:2011tl,Ursu:2009gc}
+
+\subsection{Statistic approaches}
+\label{sec:statistic}
+
+\subsection{Remixing}
+
+The reconfiguration of smaller units that carry meaning within themselves is common practice for textual media such as blogs, where it is easy to quote part of  another author`s writing in a new post [ref]. 
+
+It needs to be said that some reconfiguration of videos is taking place, but even though it often concerns content that was originally sourced online, much of the creative act of remixing happens offline.
+
+
+\subsection{Taking the remix online}
+
+examples like: Aaron Koblin (johnny cash project, exquisite corps, etc)
+
+there is even word of a true remix culture.
+
+the availability of multimedia content via the internet has meant a surge in 
+
 
 \section{Computational Difficulties}
 
